Upgraded AsyncFileMetrics to VarHandle
Minor buffer cleanup